ebl-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: softloft/ministore-userservices:latest
        ports:
        - containerPort: 8888






# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: stilton
#   labels:
#     app: cheese
#     cheese: stilton
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: cheese
#       task: stilton
#   template:
#     metadata:
#       labels:
#         app: cheese
#         task: stilton
#         version: v0.0.1
#     spec:
#       containers:
#       - name: cheese
#         image: errm/cheese:stilton
#         resources:
#           requests:
#             cpu: 100m
#             memory: 50Mi
#           limits:
#             cpu: 100m
#             memory: 50Mi
#         ports:
#         - containerPort: 80
# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: cheddar
#   labels:
#     app: cheese
#     cheese: cheddar
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: cheese
#       task: cheddar
#   template:
#     metadata:
#       labels:
#         app: cheese
#         task: cheddar
#         version: v0.0.1
#     spec:
#       containers:
#       - name: cheese
#         image: errm/cheese:cheddar
#         resources:
#           requests:
#             cpu: 100m
#             memory: 50Mi
#           limits:
#             cpu: 100m
#             memory: 50Mi
#         ports:
#         - containerPort: 80
# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: wensleydale
#   labels:
#     app: cheese
#     cheese: wensleydale
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: cheese
#       task: wensleydale
#   template:
#     metadata:
#       labels:
#         app: cheese
#         task: wensleydale
#         version: v0.0.1
#     spec:
#       containers:
#       - name: cheese
#         image: errm/cheese:wensleydale
#         resources:
#           requests:
#             cpu: 100m
#             memory: 50Mi
#           limits:
#             cpu: 100m
#             memory: 50Mi
#         ports:
#         - containerPort: 80
